--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
 	<configuration>
-		<warName>extractorapp-private</warName>
+		<warName>analytics-private</warName>
 	</configuration>
       </plugin>
       <plugin>
