analytics : see #1970 add server part to the new filter feature. Filters are read from request params and added in SQL queries

--- a/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootCategory=DEBUG, R
 
-log4j.logger.org.pigma.analytics=DEBUG, console
+log4j.logger.org.georchestra.analytics=DEBUG, console
 
 log4j.appender.R = org.apache.log4j.rolling.RollingFileAppender
 log4j.appender.R.RollingPolicy = org.apache.log4j.rolling.TimeBasedRollingPolicy
