Revert "Merge pull request #221 from landryb/fix-gmaven-plugin"
This reverts commit 2fd415172074bfa836c910514de629baf5d2f7c7, reversing
changes made to f525ee4d641aedc31469ae622962e4d372f804d1.

--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <artifactId>maven-dependency-plugin</artifactId>
       </plugin>
 		<plugin>
-			<groupId>org.codehaus.gmaven</groupId>
+			<groupId>org.codehaus.groovy.maven</groupId>
 			<artifactId>gmaven-plugin</artifactId>
 			<dependencies>
 				<dependency>
