--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.georchestra</groupId>
     <artifactId>root</artifactId>
-    <version>13.12-SNAPSHOT</version>
+    <version>13.09</version>
   </parent>
   <artifactId>analytics</artifactId>
   <packaging>war</packaging>
