--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-src/main/webapp/site/header.jsp
-src/main/webapp/site/js/app/config.js
+src/main/webapp/header.jsp
+src/main/webapp/js/app/config.js
 src/main/webapp/WEB-INF/analytics.properties
