--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.georchestra</groupId>
 		<artifactId>root</artifactId>
-		<version>14.01</version>
+		<version>14.06-SNAPSHOT</version>
 	</parent>
 	<artifactId>analytics</artifactId>
 	<packaging>war</packaging>
