analytics - sanitizing a bit user-provided parameters
The current code should be looked more thoroughly, I'm not happy with
the current fix, and I might have forgotten some holes.

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
 						<groupId>org.georchestra</groupId>
 						<artifactId>config</artifactId>
 						<version>${project.version}</version>
+                                                <classifier>${server}</classifier>
 					</dependency>
 				</dependencies>
 			</plugin>
