--- a/pom.xml
+++ b/pom.xml
@@ -114,15 +114,17 @@
 						<groupId>org.georchestra</groupId>
 						<artifactId>config</artifactId>
 						<version>${project.version}</version>
-                                                <classifier>${server}</classifier>
+						<classifier>${server}</classifier>
 					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
 				<configuration>
 					<warName>analytics</warName>
+					<packagingExcludes>**/docs/**,js/lib/external/ext/examples/**,js/lib/external/ext/builds/**,js/lib/external/ext/pkgs/**,PostTreatment.groovy</packagingExcludes>
 				</configuration>
 			</plugin>
 			<plugin>
