analytics datadir - taking into account remarks

--- a/pom.xml
+++ b/pom.xml
@@ -250,10 +250,10 @@
             <version>1.0.6</version>
             <configuration>
               <packageName>georchestra-analytics</packageName>
-              <packageDescription>Debian package for geOrchestra's Analytics Webapp.</packageDescription>
+              <packageDescription>geOrchestra Analytics webapp</packageDescription>
               <projectOrganization>geOrchestra</projectOrganization>
-              <maintainerName>Pierre Mauduit</maintainerName>
-              <maintainerEmail>pierre.mauduit@gmail.com</maintainerEmail>
+              <maintainerName>PSC</maintainerName>
+              <maintainerEmail>psc@georchestra.org</maintainerEmail>
               <excludeAllArtifacts>true</excludeAllArtifacts>
             </configuration>
           </plugin>
