--- a/src/deb/resources/etc/georchestra/analytics/analytics.properties
+++ b/src/deb/resources/etc/georchestra/analytics/analytics.properties
@@ -1,4 +1,11 @@
+# This variable configures the JDBC URL to the database where the statistics
+# gathered by the OGC-server-statistics module are stored
 dlJdbcUrlOGC=jdbc:postgresql://localhost:5432/georchestra?user=www-data&password=www-data
+
+# This variable configures the JDBC URL to the database where the download
+# requests are stored. This is relevant only if the downloadform module is
+# activated).
 dlJdbcUrlDLForm=jdbc:postgresql://localhost:5432/georchestra?user=www-data&password=www-data
+
 language=fr
 instance=geOrchestra
