--- a/pom.xml
+++ b/pom.xml
@@ -171,17 +171,15 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.18</version>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.2.11.v20150529</version>
         <configuration>
-          <connectors>
-            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-              <port>8080</port>
-              <maxIdleTime>10000</maxIdleTime>
-            </connector>
-          </connectors>
+          <webApp><contextPath>/analytics/</contextPath></webApp>
           <scanIntervalSeconds>5</scanIntervalSeconds>
+          <httpConnector>
+            <port>8280</port>
+          </httpConnector>
         </configuration>
       </plugin>
     </plugins>
