JPA-ization of analytics webapp
- Refactor so PostgresqlConnection class is now useless
- Sweeping off the existing beans
- Introducing a new controller to manage the stats

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
   </description>
   <url>http://www.georchestra.org</url>
   <properties>
-    <spring.version>3.1.0.RELEASE</spring.version>
+    <spring.version>4.2.3.RELEASE</spring.version>
+    <spring_data.version>1.11.1.RELEASE</spring_data.version>
   </properties>
   <dependencies>
     <dependency>
@@ -28,6 +29,37 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+      <version>${spring_data.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>1.9.1.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator-annotation-processor</artifactId>
+      <version>4.1.0.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>5.0.3.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>1.0.0.GA</version>
+      <classifier/>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
@@ -81,8 +113,8 @@
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
