switched lang to en in debian package resources

--- a/src/deb/resources/etc/georchestra/analytics/analytics.properties
+++ b/src/deb/resources/etc/georchestra/analytics/analytics.properties
@@ -7,5 +7,5 @@ dlJdbcUrlOGC=jdbc:postgresql://localhost:5432/georchestra?user=www-data&password
 # activated).
 dlJdbcUrlDLForm=jdbc:postgresql://localhost:5432/georchestra?user=www-data&password=www-data
 
-language=fr
+language=en
 instance=geOrchestra
