analytics,cas,mapfishapp - repairing deb packaging
Missing war in the generated deb, related to issue #1211, #1239

--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,7 @@
               <projectOrganization>geOrchestra</projectOrganization>
               <maintainerName>PSC</maintainerName>
               <maintainerEmail>psc@georchestra.org</maintainerEmail>
-              <excludeAllArtifacts>true</excludeAllArtifacts>
+              <excludeAllDependencies>true</excludeAllDependencies>
             </configuration>
           </plugin>
         </plugins>
