--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@
       <version>1.4</version>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.13</version>
+    </dependency>
+    <dependency>
       <groupId>org.georchestra</groupId>
       <artifactId>georchestra-commons</artifactId>
       <version>${project.version}</version>
