analytics -  adding a profile to generate an API doc
See http://build.georchestra.org/analytics-apidoc/# for the result.

The advantage of this JSONDoc module is that it should not add extra
dependencies at runtime (compared to swagger), or only one to allow
adding annotations that are only meant for the documentation.

--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,100 @@
   </build>
   <profiles>
     <profile>
+      <id>apidoc</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.jsondoc</groupId>
+          <artifactId>jsondoc-ui</artifactId>
+          <version>1.2.11</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>unpack-jsondoc</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.jsondoc</groupId>
+                      <artifactId>jsondoc-ui</artifactId>
+                      <type>jar</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${project.build.directory}/jsondoc-ui</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.jsondoc</groupId>
+            <artifactId>jsondoc-maven-plugin</artifactId>
+            <version>1.2.11</version>
+            <dependencies>
+              <dependency>
+                <groupId>org.jsondoc</groupId>
+                <artifactId>jsondoc-springmvc</artifactId>
+                <version>1.2.11</version>
+              </dependency>
+              <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+              </dependency>
+            </dependencies>
+            <executions>
+              <execution>
+                <id>generate-jsondoc</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>generate</goal>
+                </goals>
+                <configuration>
+                  <version>4.1</version>
+                  <basePath>http://localhost:8080/api</basePath>
+                  <packages>
+                    <package>org.georchestra.analytics</package>
+                  </packages>
+                  <outputFile>${project.build.directory}/jsondoc-ui/jsondoc.json</outputFile>
+                  <scanner>org.jsondoc.springmvc.scanner.Spring4JSONDocScanner</scanner>
+                  <playgroundEnabled>false</playgroundEnabled>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>com.google.code.maven-replacer-plugin</groupId>
+            <artifactId>replacer</artifactId>
+            <version>1.5.3</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>replace</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <includes>
+                <include>${project.build.directory}/jsondoc-ui/jsondoc-ui.html</include>
+              </includes>
+              <token>'_JSONDOC_OFFLINE_PLACEHOLDER_'</token>
+              <valueFile>${project.build.directory}/jsondoc-ui/jsondoc.json</valueFile>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>debianPackage</id>
       <build>
         <finalName>${project.artifactId}-generic</finalName>
