docker - allow customization of image name
This commit introduces the possibility to modify the target docker image
name generated by the docker-maven plugin. i.e. for each module you can
now:

```
$ mvn clean package docker:build -Pdocker \
-DdockerImageName=myorg/analytics:\${project.parent.version\}-1 \
--pl analytics
```

This will generate a docker image named `myorg/analytics` and tagged
with the current geOrchestra version suffixed by `-1`.

- tests: compilation time on the analytics module, reported the
modification on each modules, but untested one by one.

- drawbacks: it needs to compile each module separately (because of
certain modules needing to have an hardcoded image name, see cas or
geoserver for instance.

- Note: Since this modification is kind of trivial, I took the
opportunity to push it on the geonetwork submodule, hence the
submodule bump in this commit.

--- a/pom.xml
+++ b/pom.xml
@@ -420,6 +420,9 @@
     </profile>
     <profile>
       <id>docker</id>
+      <properties>
+        <dockerImageName>georchestra/${project.artifactId}</dockerImageName>
+      </properties>
       <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
@@ -428,7 +431,7 @@
             <artifactId>docker-maven-plugin</artifactId>
             <version>0.3.8</version>
             <configuration>
-              <imageName>georchestra/${project.artifactId}</imageName>
+              <imageName>${dockerImageName}</imageName>
               <dockerDirectory>${project.basedir}/src/docker</dockerDirectory>
               <resources>
                 <resource>
