--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -1,8 +1,14 @@
 FROM jetty:9.3-jre8
 
-ADD . /
-
 RUN java -jar "$JETTY_HOME/start.jar" --add-to-startd=jmx,jmx-remote,stats
 
-CMD ["sh", "-c", "exec java -Djava.io.tmpdir=/tmp/jetty -Dgeorchestra.datadir=/etc/georchestra -Xmx$XMX -Xms$XMX -jar /usr/local/jetty/start.jar"]
+ADD . /
 
+VOLUME [ "/tmp" ]
+
+CMD ["sh", "-c", "exec java \
+-Djava.io.tmpdir=/tmp/jetty \
+-Dgeorchestra.datadir=/etc/georchestra \
+-Xmx$XMX -Xms$XMX \
+-XX:-UsePerfData \
+-jar /usr/local/jetty/start.jar"]
