XMS, JAVA_OPTIONS and volume for /run/jetty

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -1,14 +1,17 @@
 FROM jetty:9.3-jre8
 
+ENV XMS=256M XMX=512M
+
 RUN java -jar "$JETTY_HOME/start.jar" --add-to-startd=jmx,jmx-remote,stats
 
 ADD . /
 
-VOLUME [ "/tmp" ]
+VOLUME [ "/tmp", "/run/jetty" ]
 
 CMD ["sh", "-c", "exec java \
 -Djava.io.tmpdir=/tmp/jetty \
 -Dgeorchestra.datadir=/etc/georchestra \
--Xmx$XMX -Xms$XMX \
+-Xms$XMS -Xmx$XMX \
 -XX:-UsePerfData \
+${JAVA_OPTIONS} \
 -jar /usr/local/jetty/start.jar"]
