analytics - add configurable local timezone and handle all granularity

--- a/src/main/filtered-resources/WEB-INF/analytics.properties
+++ b/src/main/filtered-resources/WEB-INF/analytics.properties
@@ -1,2 +1,6 @@
 dlJdbcUrlOGC=${dlJdbcUrlOGC}
 dlJdbcUrlDLForm=${dlJdbcUrlDLForm}
+
+# Timezone to convert datetime sent by UI to UTC
+# (see Canonical ID on http://joda-time.sourceforge.net/timezones.html for possible values)
+localTimezone=Europe/Paris
