--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -6,7 +6,7 @@ RUN java -jar "$JETTY_HOME/start.jar" --add-to-startd=jmx,jmx-remote,stats
 
 ADD . /
 
-RUN mkdir -p /etc/georchestra && \
+RUN mkdir /etc/georchestra && \
     chown jetty:jetty /etc/georchestra
 
 VOLUME [ "/tmp", "/run/jetty" ]
