--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -6,8 +6,7 @@ RUN java -jar "$JETTY_HOME/start.jar" --add-to-startd=jmx,jmx-remote,stats
 
 ADD . /
 
-RUN mkdir /etc/georchestra && \
-    chown jetty:jetty /etc/georchestra
+RUN chown jetty:jetty /etc/georchestra
 
 VOLUME [ "/tmp", "/run/jetty" ]
 
