Fix failed docker build because upstream image change
New jetty docker image now set user as jetty also for build step, so we
cannot add package. This commit temporary switch to root user for
installaing packages.
See :
https://github.com/appropriate/docker-jetty/commit/19b433117c3c22550ce87be81cbb6f6952890928#diff-dad6c4a2a53860754faaf15e201d8b0d

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -6,7 +6,13 @@ RUN java -jar "$JETTY_HOME/start.jar" --add-to-startd=jmx,jmx-remote,stats
 
 ADD . /
 
+# Temporary switch to root
+USER root
+
 RUN chown jetty:jetty /etc/georchestra
+
+# Restore jetty user
+USER jetty
 
 VOLUME [ "/tmp", "/run/jetty" ]
 
