--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 src/main/webapp/header.jsp
 src/main/webapp/js/app/config.js
 src/main/webapp/WEB-INF/analytics.properties
+src/main/webapp/WEB-INF/jsp/index.jsp
