Fixing log4j issues

--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
+      <version>${log4j1.version}</version>
       <type>jar</type>
     </dependency>
     <dependency>
