--- a/pom.xml
+++ b/pom.xml
@@ -424,6 +424,7 @@
             <configuration>
               <packageName>georchestra-analytics</packageName>
               <packageDescription>geOrchestra Analytics webapp</packageDescription>
+              <packageRevision>${maven.build.timestamp}~${build.commit.id.abbrev}</packageRevision>
               <projectOrganization>geOrchestra</projectOrganization>
               <maintainerName>PSC</maintainerName>
               <maintainerEmail>psc@georchestra.org</maintainerEmail>
