jetty - disable directory listing on other webapps
Following https://github.com/georchestra/geonetwork/pull/80 but for the
other webapps.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,11 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_3_0.xsd">
 
+    <context-param>
+      <param-name>org.eclipse.jetty.servlet.Default.dirAllowed</param-name>
+      <param-value>false</param-value>
+    </context-param>
+
     <!-- filters -->
     <filter>
       <filter-name>encodingFilter</filter-name>
