--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM jetty:9-jre8
 
 ENV XMS=256M XMX=1G
 
-RUN java -jar "$JETTY_HOME/start.jar" --create-startd --add-to-start=jmx,jmx-remote,stats
+RUN java -jar "$JETTY_HOME/start.jar" --create-startd --add-to-start=jmx,jmx-remote,stats,http-forwarded
 
 ADD . /
 
