analytics - sets a default datadir as a java system property, only for jetty:run
It allows to avoid to pass the `-Dgeorchestra.datadir=/etc/georchestra`
option to the `mvn jetty:run` command.

See https://github.com/georchestra/georchestra/issues/2028

--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,12 @@
           <httpConnector>
             <port>8280</port>
           </httpConnector>
+          <systemProperties>
+            <systemProperty>
+              <name>georchestra.datadir</name>
+              <value>/etc/georchestra</value>
+          </systemProperty>
+        </systemProperties>
         </configuration>
       </plugin>
     </plugins>
