--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <url>http://www.georchestra.org</url>
   <properties>
     <packageDatadirScmVersion>master</packageDatadirScmVersion>
+    <server>generic</server>
   </properties>
   <dependencies>
     <dependency>
