analytics - extractorapp: replace the Ext.js git submodule by a webjar
Webjars (https://www.webjars.org/) are client side JS
libraries packaged into a .jar file.

According to the documentation for servlet 3 apps
(https://www.webjars.org/documentation#servlet3) we just need
to add the required dependency.

This patch replaces the Ext.js git submodule by the extjs
4.1.1a jar dependency in both extractorapp and analytics,
saving ~500M of disk space in the developer's source code
checkout.

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>extjs</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <scope>compile</scope>
@@ -128,9 +132,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <packagingExcludes>**/docs/**,js/lib/external/ext/examples/**,js/lib/external/ext/builds/**,js/lib/external/ext/pkgs/**</packagingExcludes>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
