--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   </description>
   <url>http://www.georchestra.org</url>
   <properties>
-    <packageDatadirScmVersion>master</packageDatadirScmVersion>
+    <packageDatadirScmVersion>18.12</packageDatadirScmVersion>
     <server>generic</server>
   </properties>
   <dependencies>
