build: add the formatter-maven-plugin to georchestra projects
Add the formatter-maven-plugin to the build/plugins
section on the following projects:
analytics, atlas, commons, console, extractorapp, header,
mapfishapp, ogc-server-statistics, security-proxy, epsg_extension.

The plugin configuration is inherited from the root pom.

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,10 @@
     <finalName>${project.artifactId}-${server}</finalName>
     <plugins>
       <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
