--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,10 @@
     <finalName>${project.artifactId}-${server}</finalName>
     <plugins>
       <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
       </plugin>
