analytics - unzip webapp in the docker image
See https://github.com/georchestra/georchestra/pull/2644 and others for
the motivation / inspiration.

tests: runtime tested a generated image

* unzipped OK
* docker run seems OK (webapp loaded, waiting for postgres to come
  alive)

--- a/pom.xml
+++ b/pom.xml
@@ -469,9 +469,8 @@
               <dockerDirectory>${project.basedir}/src/docker</dockerDirectory>
               <resources>
                 <resource>
-                  <targetPath>/var/lib/jetty/webapps</targetPath>
-                  <directory>${project.build.directory}</directory>
-                  <include>${project.artifactId}.war</include>
+                  <targetPath>/var/lib/jetty/webapps/${project.artifactId}</targetPath>
+                  <directory>${project.build.directory}/${project.artifactId}</directory>
                 </resource>
                 <resource>
                   <targetPath>/etc/georchestra</targetPath>
