--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
   </description>
   <url>http://www.georchestra.org</url>
   <properties>
-    <packageDatadirScmVersion>19.04</packageDatadirScmVersion>
+    <packageDatadirScmVersion>master</packageDatadirScmVersion>
     <server>generic</server>
+    <context.name>${project.artifactId}</context.name>
   </properties>
   <dependencies>
     <dependency>
@@ -469,8 +470,8 @@
               <dockerDirectory>${project.basedir}/src/docker</dockerDirectory>
               <resources>
                 <resource>
-                  <targetPath>/var/lib/jetty/webapps/${project.artifactId}</targetPath>
-                  <directory>${project.build.directory}/${project.artifactId}</directory>
+                  <targetPath>/var/lib/jetty/webapps/${context.name}</targetPath>
+                  <directory>${project.build.directory}/${context.name}</directory>
                 </resource>
                 <resource>
                   <targetPath>/etc/georchestra</targetPath>
