Implement custom scripts (#4083)
* feat: implement custom scripts 

for security-proxy, console, geoserver, datafeeder-ui & ldap

* feat: update scripts with edevos recommendations

* feat: add datafeeder, analytics and database scripts

feat: add datafeeder, analytics and database scripts

* feat: update quote to fix codacy static analysis

* feat: reimplement java_opts empty for datafeeder

* feat: taking account of jeanpommier recommandation

* feat: update command to copy instead of move

* fix: update command in comment

* fix: remove comment

* feat: update user:group in dockerfile and update sh file

* dont modify datafeeder ui

* standardize comments about regex in run-parts

---------

Co-authored-by: Emilien Devos <emilien.devos@camptocamp.com>

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -1,10 +1,16 @@
 FROM jetty:9-jre11
+USER root
+RUN mkdir -p /docker-entrypoint.d
+RUN chown jetty:jetty /docker-entrypoint.d
+USER jetty
 
 ENV XMS=256M XMX=1G
 
 RUN java -jar "$JETTY_HOME/start.jar" --create-startd --add-to-start=jmx,jmx-remote,stats,http-forwarded
 
 COPY --chown=jetty:jetty . /
+
+ENTRYPOINT [ "/docker-entrypoint.sh" ]
 
 VOLUME [ "/tmp", "/run/jetty" ]
 
