maven - generalizing source / test-sources jar generation
Some geOrchestra modules already provide source-jar & test-source-jar
packages, but not all. This PR aims to generalize their generation
across modules.

This is not necessary per se, but makes IDE (e.g. intellij) life easier
when it tries to download the sources and resolve them, else requiring
an extra configuration step from the user to manually provide a source
tree for some of the geOrchestra components being reused
(testcontainers, ldap-acct-mgmt, commons ...).

--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,10 @@
         </systemProperties>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
   <profiles>
