--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <log4j1.version>1.2.17</log4j1.version>
         <json.version>20180813</json.version>
         <packageDatadirScmVersion>master</packageDatadirScmVersion>
+        <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
     </properties>
     <dependencies>
         <dependency>
@@ -155,6 +156,15 @@
     </dependencies>
     <build>
         <finalName>${project.artifactId}-${server}</finalName>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>pl.project13.maven</groupId>
+                    <artifactId>git-commit-id-plugin</artifactId>
+                    <version>4.0.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
@@ -182,6 +192,50 @@
                             <value>/etc/georchestra</value>
                         </systemProperty>
                     </systemProperties>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>set-project-packageversion</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <exportAntProperties>true</exportAntProperties>
+                            <target>
+                                <condition property="project.packageVersion"
+                                           value="${project.version}.${maven.build.timestamp}~${build.commit.id.abbrev}"
+                                           else="99.master.${maven.build.timestamp}~${build.commit.id.abbrev}">
+                                    <matches string="${build.branch}" pattern="\d+\.\d+\.x$"/>
+                                </condition>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <prefix>build</prefix>
+                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
+                    <skipPoms>false</skipPoms>
+                    <verbose>false</verbose>
+                    <gitDescribe>
+                        <tags>true</tags>
+                    </gitDescribe>
+                    <injectIntoSysProperties>true</injectIntoSysProperties>
                 </configuration>
             </plugin>
         </plugins>
